1.6.1/_sources/arcgis.geoanalytics.toc.rst.txt
.. arcgis documentation master file, created by
   sphinx-quickstart on Thu Oct 20 23:21:00 2016.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

arcgis.geoanalytics module
==========================

.. automodule:: arcgis.geoanalytics


define_output_datastore
--------------
.. automethod:: arcgis.geoanalytics.define_output_datastore

get_datastores
--------------
.. automethod:: arcgis.geoanalytics.get_datastores

is_supported
--------------
.. automethod:: arcgis.geoanalytics.is_supported

Submodules
--------------
.. toctree::
   :maxdepth: 3

   arcgis.geoanalytics.analyze_patterns
   arcgis.geoanalytics.data_enrichment
   arcgis.geoanalytics.find_locations
   arcgis.geoanalytics.manage_data
   arcgis.geoanalytics.summarize_data
   arcgis.geoanalytics.use_proximity
